# CGRA408_Proj1

./: CMakeLists.txt
res/: Reflection_64.pbrt  Refraction_64.pbrt  Shadow_128.pbrt
src/: CMakeLists.txt  camera.cpp  camera.hpp  cgra_math.hpp  distantLight.cpp  distantLight.hpp  film.cpp  film.hpp  geometry.cpp  geometry.hpp  helper.cpp  helper.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  plain.cpp  plain.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangleMesh.cpp  triangleMesh.hpp
